# cpcli

./: .bazelrc  .clang-format  .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel  Makefile  README.md  TODO.md  WORKSPACE  compile_flags.txt  flake.nix  main.sh  project_config.json  project_config.template  repositories.bzl  shell.nix
.github/workflows/: main.yml
binary/: .gitignore
binary/TaskConfigEditor/src/: TaskConfigEditor.java
binary/checker/: double_4.cpp  double_6.cpp  double_9.cpp  token_checker.cpp
binary/checker_src/: double_4.cpp  double_6.cpp  double_9.cpp  testlib.h  token_checker.cpp
binary/precompiled_headers/: file.cpp  gen.sh
cc/: index.js  package-lock.json  package.json
core/docs/source/: index.rst
core/libs/color/: BUILD.bazel
core/libs/color/include/: color.hpp
core/libs/compiler/: BUILD.bazel
core/libs/compiler/include/: compiler.hpp
core/libs/compiler/src/: compiler.cpp  rust.cpp
core/libs/constant/: BUILD.bazel
core/libs/constant/include/: constant.hpp
core/libs/operations/: BUILD.bazel
core/libs/operations/include/: operations.hpp
core/libs/operations/src/: compile_headers.cpp  operations.cpp  parse_args.cpp  parse_config.cpp
core/libs/path_manager/: BUILD.bazel
core/libs/path_manager/include/: path_manager.hpp
core/libs/path_manager/src/: path_manager.cpp
core/libs/template_manager/: BUILD.bazel
core/libs/template_manager/include/: template_manager.hpp
core/libs/template_manager/src/: template_manager.cpp
core/libs/utils/: BUILD.bazel
core/libs/utils/include/: utils.hpp
core/libs/utils/src/: utils.cpp
core/test/: BUILD.bazel  test_main.cpp
core/test/src/: test_main.cpp  test_path_manager.cpp  test_util.cpp
cpcli/: CMakeLists.txt  main.cpp
cpcli/.cache/clangd/index/: ansicolor_sink-inl.h.807F11B26504039D.idx  ansicolor_sink.h.D427085D8EE6FB64.idx  backtracer-inl.h.30BE12AC92055014.idx  backtracer.h.5E1A00E8A7340851.idx  circular_q.h.2F8F51C900487378.idx  color.hpp.7D27AE7A58505FD7.idx  color.hpp.CDF735E2A165E5B2.idx  common-inl.h.CC70913C75DD0FD5.idx  common.h.3CF5C5793E1A1ED6.idx  compile_headers.cpp.E2A0C3D0016D2413.idx  console_globals.h.BA4B1D13237ADED6.idx  constant.hpp.B67C9F675CC8A7F3.idx  core.h.770A9771D4F5098F.idx  double_4.cpp.AF00F27780B9272A.idx  double_6.cpp.376E33E1BD7CB5D3.idx  double_9.cpp.48DE143CA908A812.idx  fmt.h.1018C26313C4E121.idx  fmt_helper.h.6857942C588B2728.idx  format-inl.h.49CE103A8704CA38.idx  format.h.D0AD4869E8691C45.idx  formatter.h.C5A253FEDCEAFF90.idx  json.hpp.08DAF06DD569C6CD.idx  log_msg-inl.h.183BACE915A668E9.idx  log_msg.h.60C9D7DDFAC23099.idx  log_msg_buffer-inl.h.A63A3B17E73CF438.idx  log_msg_buffer.h.76A86A93CD4AFDC5.idx  logger-inl.h.A37482AC0A9D2737.idx  logger.h.A781A3E465A180A0.idx  main.cpp.F6F44F494C0F8FC3.idx  null_mutex.h.94000C8E1F2FB364.idx  operations.cpp.3C4961BFA61FB5C5.idx  operations.hpp.3C046EEF175E8DB0.idx  os-inl.h.A4ECE64A5954A5E7.idx  os.h.A36D7C27733E51BF.idx  parse_config.cpp.F489E74195859220.idx  pattern_formatter-inl.h.FC63313F3EC00706.idx  pattern_formatter.h.B558D416F8BAFFB1.idx  periodic_worker-inl.h.B399912C3F345C1D.idx  periodic_worker.h.D530081150506ECF.idx  print_usage.cpp.9252C0D370282A46.idx  (+13 more)
cpcli/cc/: CMakeLists.txt  cc.cpp
cpcli/checkers/: CMakeLists.txt
cpcli/cpcli/: CMakeLists.txt  cpcli.cpp
cpcli/main/: CMakeLists.txt  main.cpp
cpcli/operations/: CMakeLists.txt  compile_headers.cpp  operations.cpp  parse_config.cpp  print_usage.cpp
cpcli/path_manager/: CMakeLists.txt  path_manager.cpp
cpcli/template_manager/: CMakeLists.txt  template_manager.cpp
cpcli/utils/: CMakeLists.txt  utils.cpp
default/checkers/: BUILD.bazel
default/checkers/src/: double_4.cpp  double_6.cpp  double_9.cpp  token_checker.cpp
default/task_editor/: config.json
default/task_editor/TaskConfigEditor/: BUILD.bazel
default/task_editor/TaskConfigEditor/src/: TaskConfigEditor.java  Test.java  config.json
default/task_editor/cli_task_editor/: BUILD.bazel  cli_task_editor.cpp
default/task_editor/java_task_editor/: BUILD.bazel
default/task_editor/java_task_editor/src/: ProblemConfig.java  TaskConfigEditor.java  Test.java  VariableGridLayout.java
default/task_editor/tauri_task_editor/: .gitignore  README.md  flake.nix  index.html  package-lock.json  package.json  vite.config.js
default/task_editor/tauri_task_editor/src/: main.js  styles.css
default/task_editor/tauri_task_editor/src-tauri/: Cargo.toml  tauri.conf.json
default/task_editor/tauri_task_editor/src-tauri/capabilities/: default.json
default/task_editor/tauri_task_editor/src-tauri/src/: main.rs
default/templates/: BUILD.bazel
default/templates/common/: problem_config.template  project_config.template
default/templates/cpp/: gen.template  interactor.template  slow.template
default/templates/java/: gen.template
default/templates/py/: checker.template  gen.template  interactor.template  slow.template  solution.template
docs/source/: conf.py  gettingstarted.rst  language.rst  overview.rst  texteditor.rst
include/: color.hpp  config.hpp  constant.hpp  cpcli.hpp  cpcli_operations.hpp  cpcli_problem_config.hpp  cpcli_project_config.hpp  cpcli_utils.hpp  operations.hpp  path_manager.hpp  template_manager.hpp  utils.hpp
include/util/: color.hpp  util.hpp
scripts/: BUILD.bazel  install.sh
src/: config.cpp  cpcli_operations.cpp  cpcli_problem_config.cpp  cpcli_project_config.cpp  cpcli_utils.cpp  main.cpp  operations.cpp  util.cpp
src/operations/: compile_headers.cpp  operations.cpp  parse_config.cpp  print_usage.cpp
src/util/: util.cpp
task_editor/TaskConfigEditor/src/: config.json
template/: checker.template  gen.template  interactor.template
template/cpp/: config.template  slow.template
test/: CMakeLists.txt  test.cpp  test_path_manager.cpp  test_util.cpp
