sh_binary(
    name = "install",
    srcs = ["//scripts:install.sh"],
    data = [
        "//core/bin:cpcli_app",
        "//core/bin:cpcli_cc",
        "//core/bin:cpcli_editor",
        "//default/checkers:double_4",
        "//default/checkers:double_6",
        "//default/checkers:double_9",
        "//default/checkers:token_checker",
        "//default/task_editor/TaskConfigEditor:TaskConfigEditor_deploy.jar",
        "//default/templates:common_template",
        "//default/templates:cpp_template",
    ],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)
