sh_binary(
    name = "install",
    srcs = ["//scripts:install.sh"],
    data = [
        "//core/bin:cpcli_app",
        "//core/bin:cpcli_cc",
        "//default/checkers:double_4",
        "//default/checkers:double_6",
        "//default/checkers:double_9",
        "//default/checkers:token_checker",
        "//default/task_editor/java_task_editor:java_task_editor_deploy.jar",
        "//default/task_editor/cli_task_editor",
        "//default/templates:common_template",
        "//default/templates:cpp_template",
        "//default/templates:py_template",
        "//default/templates:java_template",
        "//default/templates:rs_template",
    ],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)
