filegroup(
    name = "cpp_template",
    srcs = ["cpp"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "py_template",
    srcs = ["py"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "common_template",
    srcs = ["common"],
    visibility = ["//visibility:public"],
)
