cc_library(
    name = "compiler",
    srcs = ["src/compiler.cpp", "src/rust.cpp"],
    hdrs = ["include/compiler.hpp"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        "//core/libs/operations",
        "//core/libs/path_manager",
        "//core/libs/utils",
        "@inja",
        "@json",
        "@spdlog",
    ],
)
