java_binary(
    # the deploy target name is "TaskConfigEditor_deploy.jar"
    name = "java_task_editor",
    srcs = glob(
        [
            "src/*.java",
        ],
    ),
    main_class = "TaskConfigEditor",
    visibility = ["//visibility:public"],
    deps = [
        "@gson//jar",
        "@commons_cli//jar"
    ],
)
